# FNIRSI-FNB-Web-Server

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  FNIRSI-Monitor.spec  GETTING_STARTED.md  HOW_TO_USE_PROFESSIONAL.md  LICENSE  Makefile  PROFESSIONAL_UPGRADE_GUIDE.md  README.md  REFRESH_INSTRUCTIONS.md  UPGRADE_SUMMARY.md  app.py  config.py  docker-compose.yml  fnb48p_monitor.py  fnb48p_server.py  install.py  install_linux.sh  install_macos.sh  install_windows.bat  install_windows.ps1  pyproject.toml  requirements-minimal.txt  requirements.txt  run.bat  run.ps1  run.py  run.sh  setup.py  simple_server.py  start.py  test-output.xml  test_setup.py
.claude/plans/completed/: bluetooth_fnb48_support.md  fnb48p_reader_srp_refactor.md
.github/workflows/: release.yml  tests.yml
data/: __init__.py  alerts.py  buffers.py  statistics.py
device/: __init__.py  alert_manager.py  bluetooth_reader.py  data_processor.py  device_manager.py  protocol_detector.py  usb_reader.py
docker/: 99-fnirsi.rules  build.sh  entrypoint.sh
docs/: DOCKER.md  FEATURES_GUIDE.md  PROJECT_SUMMARY.md  QUICK_START_PROFESSIONAL.md  README.md  VISUAL_IMPROVEMENTS.md
macos/: README.md  create_icon.sh  icon.icns
shared/: __init__.py  utils.py
static/: manifest.json
static/css/: professional.css  style.css
static/js/: analysis.js  common.js  dashboard.js  dashboard_pro.js  history.js  oscilloscope.js  spectrum.js
storage/: __init__.py  session_manager.py  settings.py
templates/: base.html  base_pro.html  dashboard.html  dashboard_pro.html  history.html  history_pro.html  settings.html  settings_pro.html
tests/: __init__.py  conftest.py  test_alert_manager.py  test_api.py  test_bluetooth_reader.py  test_config.py  test_data_decoding.py  test_data_processor.py  test_device_manager.py  test_protocol_detector.py  test_statistics.py  test_usb_reader.py  test_websocket.py
